# Age-Related-Macular-Degeneration

./: CMakeLists.txt  README.md  TRAINING.md  amd-dl5.ipynb  backend.py  package-lock.json  package.json  replit.md  requirements.txt  train.py
.github/workflows/: build-installer.yml
backend/: README.md  api.py  backend.py  database.py  dl_model.py  preprocessing.py  server.py  train_and_evaluate.py
backend/models/CNN/: best_resnet_model.pth  weights.py
backend/models/DeiT-S/: best_deit_model.pth  deit-s.ipynb  deit-s_formatted.py
backend/models/ViT_base/: ViT_base_kaggle.ipynb  ViT_base_weights.txt  best_vit_model.pth  best_vit_model_2.pth
backend/tests/: test_explainers.py
build_sandbox/: CMakeCache.txt
docs/: PROJECT.md  normalization.md
docs/libmds/: p1.py
docs/pylibs-docs/: cv2.md  dicom-p1.md  dicom-p2.md
installer/: AMD_GUI.iss
runtime/: patient_records.db
scripts/: backend_entry.py  package.py  setup_fedora_python.sh
scripts/heatmap_dashboard/: README_dashboard.md  gradcam_dashboard.py  requirements_dashboard.txt
src/: main.cpp
